tests/snapshots/examples_fixtures/suggestions__no_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/no_match.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
