tests/snapshots/examples_fixtures/suggestions__scoped_variables.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/scoped_variables.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
