tests/snapshots/examples_fixtures/suggestions__test_suggestions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/test_suggestions.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
